// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="ProfilesStyle__Container-sc-1cexo3a-0 kaNoxW"
>
  <h1
    class="ProfilesStyle__Title-sc-1cexo3a-1 fvwNMW"
  >
    Who's watching?
  </h1>
  <ul
    class="ProfilesStyle__List-sc-1cexo3a-2 jGOpnt"
  >
    <li
      class="ProfilesStyle__Item-sc-1cexo3a-5 hFAAJT"
    >
      <img
        class="ProfilesStyle__Picture-sc-1cexo3a-4 gwTMHW"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="ProfilesStyle__Name-sc-1cexo3a-3 fFAuyN"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="ProfilesStyle__Container-sc-1cexo3a-0 kaNoxW"
>
  <h1
    class="ProfilesStyle__Title-sc-1cexo3a-1 fvwNMW"
  >
    Who's watching?
  </h1>
  <ul
    class="ProfilesStyle__List-sc-1cexo3a-2 jGOpnt"
  >
    <li
      class="ProfilesStyle__Item-sc-1cexo3a-5 hFAAJT"
    >
      <img
        class="ProfilesStyle__Picture-sc-1cexo3a-4 gwTMHW"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="ProfilesStyle__Name-sc-1cexo3a-3 fFAuyN"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
